[package]
name = "rust-neopixels"
version = "0.2.0"
authors = ["Anton Smeenk <asmeenk@planet.nl>"]
edition = "2021"
categories = [
    "embassy",
    "embedded",
    "no-std",
    "hardware-support"]
keywords = ["embassy", "ws2812","neopixels"]
description = "SPI Driver for ws2812 leds"
documentation = ""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smeenka/rust-neopixels"

[lib]
name = "neopixels"
path = "src/lib.rs"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = {version = "0.1.0", path = "/data/workspace/rust/libs/embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]}
embassy-stm32 = {version = "0.1.0", path = "/data/workspace/rust/libs/embassy/embassy-stm32", features = ["nightly", "defmt", "time-driver-any", "stm32g071rb", "memory-x", "unstable-pac", "exti"]}
embassy-sync = {version = "0.1.0", path = "/data/workspace/rust/libs/embassy/embassy-sync", features = ["defmt"]}
embassy-time = {version = "0.1.0", path = "/data/workspace/rust/libs/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]}

cortex-m = {version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
futures = {version = "0.3.17", default-features = false, features = ["async-await"]}
heapless = {version = "0.7.5", default-features = false}
panic-probe = {version = "0.3", features = ["print-defmt"]}
nb = "0.1.3"

[profile.release]
lto = true

[features]

