[package]
name = "rust-neopixels"
version = "0.1.1"
authors = ["Anton Smeenk <asmeenk@planet.nl>"]
edition = "2021"
categories = [
    "embedded",
    "no-std",
    "hardware-support"]
keywords = ["smart-leds", "ws2812"]
description = "SPI Driver agnostic driver for ws2812 leds"
documentation = ""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smeenka/rust-neopixels"

[lib]
name = "neopixels"
path = "src/lib.rs"

[dependencies]
smart-leds-trait = "0.2.1"

[dev-dependencies]
nb = "1.1.0"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
cortex-m-rt = "0.7.3"

[dev-dependencies.stm32g0]
features = ["rt","stm32g070"]
version = "0.15.1"


[dev-dependencies.stm32g0xx-hal]
default-features = false
features = ["rt", "stm32g070", "i2c-nonblocking"]
version = "0.2.0"
git="https://github.com/stm32-rs/stm32g0xx-hal"

[dev-dependencies.ws2812-spi]
version = "0.4.0"
#path = "/data/workspace/rust/libs/hal/stmg0/ws2812-spi-rs/"
git = "https://github.com/smeenka/ws2812-spi-rs"
branch = "feature/halfduplex"


[profile.release]
lto = true


[features]
